--- a/wp-content/themes/oceanwp-child/style.css
+++ b/wp-content/themes/oceanwp-child/style.css
@@ -152,3 +152,5 @@ a.menu-link {
 /* MORTEN ændrede i GitHub Desktop */
 
 /*IDA ændrede i GitHub Desktop*/
+
+/* Karoline ændrede i GITHUB Desktop */
