--- a/wp-content/themes/oceanwp-child/style.css
+++ b/wp-content/themes/oceanwp-child/style.css
@@ -153,5 +153,7 @@ a.menu-link {
 
 /*IDA ændrede i GitHub Desktop*/
 
-/* karoline ændrer github *
+/* karoline ændrer github */
+
+/* Simon ændrede i Github Desktop*/
 
